tests/requests/invalid/020.py
from gunicorn.config import Config
from gunicorn.ghttp.errors import InvalidHeaderName

cfg = Config()
request = InvalidHeaderName
